# ProjetFinalDIT

./: .gitignore  README.md  app.py  best_model.pkl  eleves_liste1.csv  eleves_liste2.xlsx  main.py  predictions.db  predictions_history.json  pyproject.toml  requirements.txt
static/: README.md
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  history.html  home.html  index.html  predict.html  reporting.html
